# Sqlitex

./: .gitignore  CHANGELOG.md  COMPARISON.md  Cargo.toml  NOTES.md  README.md  ROADMAP.md  TODOs.md  benchmark-wip.rs  commit.md  deny.toml  issues.md  notes.md
.cargo/: config.toml
.config/: nextest.toml
docs/src/content/docs/: index.mdx
examples/: README.md  batch_operation.rs  fts5.rs  multiple_struct.rs  quick_start.rs  runtime.rs  transactions.rs  transactions_runtime.rs
examples/blob/: README.md  blob.rs
sqlitex/: Cargo.toml  Documentation.md  README.md  crates_io_readme.md
sqlitex/src/: lib.rs
sqlitex/tests/: tx.rs
sqlitex_core/: Cargo.toml
sqlitex_core/src/errors/: connection.rs  mod.rs  row.rs  statement.rs
sqlitex_core/src/internal_sqlite/: dynamic_rows.rs  mod.rs  preparred_statement.rs  rows_dao.rs  sqlitex_connection.rs  sqlitex_statement.rs
sqlitex_core/src/traits/: dynamic.rs  from_sql.rs  mod.rs  to_sql.rs
sqlitex_core/src/utility/: utils.rs
sqlitex_macros/: Cargo.toml
sqlitex_macros/src/: codegen.rs  lib.rs  migrations.rs  parse.rs  schema_source.rs  sql_mapping.rs  sqlite_validation.rs  utils.rs
sqlitex_macros/src/codegen/: read.rs
sqlitex_type_inference/: Cargo.toml
sqlitex_type_inference/src/: binding_patterns.rs  expr.rs  lib.rs  select_patterns.rs  table.rs
sqlitex_type_inference/tests/: ai_tests.rs  binding_test.rs  select_and_binding_test.rs  select_test.rs  tests.rs
tests/: Cargo.toml
tests/src/: lib.rs  nested_tx.rs
type_inference/: Cargo.toml
type_inference/src/: binding_patterns.rs  expr.rs  lib.rs
