[workspace]
resolver = "3"
members = [
    "sqlitex",
    "sqlitex_core",
    "sqlitex_macros",
    "sqlitex_type_inference",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"


[workspace.dependencies]
sqlitex ={ path = "./sqlitex", version = "0.3.0"}
sqlitex_core = { path = "./sqlitex_core", version = "0.3.0" }
sqlitex_macros = { path = "./sqlitex_macros", version = "0.3.0" }
sqlitex_type_inference = { path = "./sqlitex_type_inference", version = "0.3.0" }
