[workspace]
resolver = "3"
members = [
    "sqlitex",
    "sqlitex_core",
    "sqlitex_macros",
    "sqlitex_type_inference",
]

[workspace.package]
version = "0.4.2"
edition = "2024"
license = "MIT"


[workspace.dependencies]
sqlitex ={ path = "./sqlitex", version = "0.4.2"}
sqlitex_core = { path = "./sqlitex_core", version = "0.4.2" }
sqlitex_macros = { path = "./sqlitex_macros", version = "0.4.2" }
sqlitex_type_inference = { path = "./sqlitex_type_inference", version = "0.4.2" }
