[package]
name = "sqlitex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "An ergonomic sqlite library with compile time guarantees"
readme = "./crates_io_readme.md"
homepage = "https://github.com/Nareshix/sqlitex"
repository = "https://github.com/Nareshix/sqlitex"
keywords = ["database", "sqlite", "sql", "ergonomic"]
categories = ["database", "database-implementations", "embedded"]
documentation = "https://docs.rs/sqlitex/latest/sqlitex"

[dependencies]
sqlitex_core.workspace = true
sqlitex_macros.workspace = true
