[package]
name = "sqlitex_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "macro for sqlitex"


[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.109", features = ["full"]}
quote = "1.0.42"
proc-macro2 = "1.0.103"
sqlformat = "0.5.0"
sqlitex_core.workspace = true
sqlitex_type_inference.workspace = true