[package]
name = "sqlitex_type_inference"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "type inference for sqlitex"

[dependencies]
sqlparser = {version = "0.59.0", features = ["visitor"]}
# qusql-parse = "0.8.0"
qusql-type = "0.6.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
